force-app/main/default/objects/CJFW_CreditRequest__c/CJFW_CreditRequest__c.object-meta.xml
<CustomObject>
    <description>[P2] 매출채권 - 여신 신청</description>
    <label>여신신청</label>
    <nameField>
        <displayFormat>CR{YYYYMMDD}{0000}</displayFormat>
        <label>Credit Request No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>