force-app/main/default/objects/CJFW_CreditRequest__c/fields/ChangedDate__c.field-meta.xml
<CustomField>
    <fullName>ChangedDate__c</fullName>
    <label>Changed Date</label>
    <type>Date</type>
</CustomField>