force-app/main/default/objects/CJFW_CreditRequest__c/fields/CollateralLoan__c.field-meta.xml
<CustomField>
    <fullName>CollateralLoan__c</fullName>
    <description>담보여신</description>
    <label>Collateral Loan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>