force-app/main/default/objects/CJFW_CreditRequest__c/fields/CollateralLoanEndDate__c.field-meta.xml
<CustomField>
    <fullName>CollateralLoanEndDate__c</fullName>
    <label>Collateral Loan End Date</label>
    <type>Date</type>
</CustomField>