force-app/main/default/objects/CJFW_CreditRequest__c/fields/CollateralLoanStartDate__c.field-meta.xml
<CustomField>
    <fullName>CollateralLoanStartDate__c</fullName>
    <label>Collateral Loan Start Date</label>
    <type>Date</type>
</CustomField>