force-app/main/default/objects/CJFW_CreditRequest__c/fields/CreditEndDate__c.field-meta.xml
<CustomField>
    <fullName>CreditEndDate__c</fullName>
    <label>Credit End Date</label>
    <type>Date</type>
</CustomField>