force-app/main/default/objects/CJFW_CreditRequest__c/fields/CreditLoad__c.field-meta.xml
<CustomField>
    <fullName>CreditLoad__c</fullName>
    <description>신용여신</description>
    <label>Credit Load</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>