force-app/main/default/objects/CJFW_CreditRequest__c/fields/CreditStartDate__c.field-meta.xml
<CustomField>
    <fullName>CreditStartDate__c</fullName>
    <label>Credit Start Date</label>
    <type>Date</type>
</CustomField>