force-app/main/default/objects/CJFW_CreditRequest__c/fields/FM_CollateralLoanPeriod__c.field-meta.xml
<CustomField>
    <fullName>FM_CollateralLoanPeriod__c</fullName>
    <formula>TEXT ( YEAR( CollateralLoanStartDate__c) ) +&quot;-&quot;+
IF(MONTH(CollateralLoanStartDate__c) &lt; 10, &quot;0&quot; + TEXT(MONTH(CollateralLoanStartDate__c)), TEXT(MONTH(CollateralLoanStartDate__c)) ) +&quot;-&quot;+
IF(DAY(CollateralLoanStartDate__c) &lt; 10, &quot;0&quot; + TEXT(DAY(CollateralLoanStartDate__c)), TEXT(DAY(CollateralLoanStartDate__c)) ) +
&quot; ~ &quot; +
TEXT ( YEAR( CollateralLoanEndDate__c) )+&quot;-&quot; +
IF(MONTH(CollateralLoanEndDate__c) &lt; 10, &quot;0&quot; + TEXT(MONTH(CollateralLoanEndDate__c)), TEXT(MONTH(CollateralLoanEndDate__c)) ) +&quot;-&quot;+
IF(DAY(CollateralLoanEndDate__c) &lt; 10, &quot;0&quot; + TEXT(DAY(CollateralLoanEndDate__c)), TEXT(DAY(CollateralLoanEndDate__c)) )</formula>
    <label>Collateral Loan Period</label>
    <type>Text</type>
</CustomField>