force-app/main/default/objects/CJFW_CreditRequest__c/fields/FM_CompanyRegisterNumber__c.field-meta.xml
<CustomField>
    <fullName>FM_CompanyRegisterNumber__c</fullName>
    <formula>Account__r.CompanyRegisterNumber__c</formula>
    <label>Company Register Number</label>
    <type>Text</type>
</CustomField>