force-app/main/default/objects/CJFW_CreditRequest__c/fields/FM_CreditManagement__c.field-meta.xml
<CustomField>
    <fullName>FM_CreditManagement__c</fullName>
    <formula>CASE( TEXT( Account__r.CreditManagement__c ) , 
&quot;01&quot;, &quot;본점 여신관리&quot;,
&quot;03&quot;, &quot;개별 여신관리&quot;,
&quot;04&quot;, &quot;여신관리 안함&quot;,
TEXT( Account__r.CreditManagement__c )
)</formula>
    <label>Credit Management</label>
    <type>Text</type>
</CustomField>