force-app/main/default/objects/CJFW_CreditRequest__c/fields/FM_RepresentativeName__c.field-meta.xml
<CustomField>
    <fullName>FM_RepresentativeName__c</fullName>
    <formula>Account__r.RepresentativeName__c</formula>
    <label>Representative Name</label>
    <type>Text</type>
</CustomField>