force-app/main/default/objects/CJFW_CreditRequest__c/fields/FM_TaxationType__c.field-meta.xml
<CustomField>
    <fullName>FM_TaxationType__c</fullName>
    <formula>CASE( TEXT( Account__r.TaxationType__c ),
&quot;01&quot;, &quot;일반과세자&quot;,
&quot;02&quot;, &quot;간이과세자&quot;,
&quot;03&quot;, &quot;면세사업자&quot;,
&quot;04&quot;, &quot;휴업자&quot;,
&quot;05&quot;, &quot;비영리법인,단체·국가기관&quot;,
&quot;06&quot;, &quot;폐업자&quot;,
&quot;07&quot;, &quot;기타유형&quot;,
&quot;91&quot;, &quot;미등록사업자(해외건수)&quot;,
&quot;99&quot;, &quot;오류(일반)사용중&quot;,
TEXT( Account__r.TaxationType__c))</formula>
    <label>Taxation Type</label>
    <type>Text</type>
</CustomField>