force-app/main/default/objects/CJFW_CreditRequest__c/fields/FM_TermsOfPayment__c.field-meta.xml
<CustomField>
    <fullName>FM_TermsOfPayment__c</fullName>
    <formula>CASE( TEXT( Account__r.TermsOfPayment__c ),
&quot;A101&quot;,&quot;L/C Usance Shipper&apos;s&quot;,
&quot;A102&quot;,&quot;L/C Usance Banker&apos;s&quot;,
&quot;A103&quot;,&quot;L/C AT Sight&quot;,
&quot;A104&quot;,&quot;D/A&quot;,
&quot;A105&quot;,&quot;D/P&quot;,
&quot;A106&quot;,&quot;COD&quot;,
&quot;A107&quot;,&quot;CAD&quot;,
&quot;A108&quot;,&quot;The Advance&quot;,
&quot;A199&quot;,&quot;T/T 송금&quot;,
&quot;C001&quot;,&quot;채권채무상계&quot;,
&quot;D000&quot;,&quot;선입금&quot;,
&quot;D100&quot;,&quot;당월내입금&quot;,
&quot;D201&quot;,&quot;1일마감후1일이내입금&quot;,
&quot;D301&quot;,&quot;10일마감후1일이내입금&quot;,
&quot;D305&quot;,&quot;10일마감후5일이내입금&quot;,
&quot;D310&quot;,&quot;10일마감후10일이내입금&quot;,
&quot;D325&quot;,&quot;10일마감후25일이내입금&quot;,
&quot;D360&quot;,&quot;10일마감후60일이내입금&quot;,
&quot;D401&quot;,&quot;15일마감후1일이내입금&quot;,
&quot;D405&quot;,&quot;15일마감후5일이내입금&quot;,
&quot;D410&quot;,&quot;15일마감후10일이내입금&quot;,
&quot;D415&quot;,&quot;15일마감후15일이내입금&quot;,
&quot;D425&quot;,&quot;15일마감후25일이내입금&quot;,
&quot;D430&quot;,&quot;15일마감후30일이내입금&quot;,
&quot;D540&quot;,&quot;20일마감후40일이내입금(Fix형)&quot;,
&quot;D640&quot;,&quot;25일마감후40일이내입금(Fix형)&quot;,
&quot;D665&quot;,&quot;25일마감후65일이내입금(Fix형)&quot;,
&quot;D701&quot;,&quot;당월마감후 1일이내입금&quot;,
&quot;D705&quot;,&quot;당월마감후 5일이내입금&quot;,
&quot;D707&quot;,&quot;당월마감후7일이내입금&quot;,
&quot;D710&quot;,&quot;당월마감후10일이내입금&quot;,
&quot;D711&quot;,&quot;당월마감후11일이내입금&quot;,
&quot;D714&quot;,&quot;당월마감후14일이내입금&quot;,
&quot;D715&quot;,&quot;당월마감후15일이내입금&quot;,
&quot;D716&quot;,&quot;당월마감후16일이내입금&quot;,
&quot;D720&quot;,&quot;당월마감후20일이내입금&quot;,
&quot;D725&quot;,&quot;당월마감후25일이내입금&quot;,
&quot;D730&quot;,&quot;당월마감후30일이내입금&quot;,
&quot;D735&quot;,&quot;당월마감후35일이내입금&quot;,
&quot;D740&quot;,&quot;당월마감후40일이내입금&quot;,
&quot;D745&quot;,&quot;당월마감후45일이내입금&quot;,
&quot;D750&quot;,&quot;당월마감후50일이내입금&quot;,
&quot;D755&quot;,&quot;당월마감후55일이내입금&quot;,
&quot;D760&quot;,&quot;당월마감후60일이내입금&quot;,
&quot;D765&quot;,&quot;당월마감후65일이내입금&quot;,
&quot;D770&quot;,&quot;당월마감후70일이내입금&quot;,
&quot;D775&quot;,&quot;당월마감후75일이내입금&quot;,
&quot;D780&quot;,&quot;당월마감후80일이내입금&quot;,
&quot;D785&quot;,&quot;당월마감후85일이내입금&quot;,
&quot;D790&quot;,&quot;당월마감후90일이내입금&quot;,
&quot;D795&quot;,&quot;당월마감후95일이내입금&quot;,
&quot;D7C0&quot;,&quot;당월마감후120일이내입금&quot;,
&quot;D7D0&quot;,&quot;당월마감후150일이내입금&quot;,
TEXT( Account__r.TermsOfPayment__c))</formula>
    <label>Terms Of Payment</label>
    <type>Text</type>
</CustomField>