force-app/main/default/objects/CJFW_CreditRequest__c/fields/Setoff__c.field-meta.xml
<CustomField>
    <fullName>Setoff__c</fullName>
    <label>Setoff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>