force-app/main/default/objects/CJFW_CreditRequest__c/fields/SetoffEndDate__c.field-meta.xml
<CustomField>
    <fullName>SetoffEndDate__c</fullName>
    <label>Setoff End Date</label>
    <type>Date</type>
</CustomField>