force-app/main/default/objects/CJFW_CreditRequest__c/fields/SetoffStartDate__c.field-meta.xml
<CustomField>
    <fullName>SetoffStartDate__c</fullName>
    <label>Setoff Start Date</label>
    <type>Date</type>
</CustomField>