force-app/main/default/objects/CJFW_CreditRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FM_CodeAccount__c</columns>
    <columns>FM_MA__c</columns>
    <columns>CollateralLoan__c</columns>
    <columns>FM_CollateralLoanPeriod__c</columns>
    <columns>CreditLoad__c</columns>
    <columns>FM_CreditStartPeriod__c</columns>
    <columns>Setoff__c</columns>
    <columns>FM_SetoffPeriod__c</columns>
    <columns>Approval_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>